<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e8e8e8"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:alpha="0.4"
        app:cardBackgroundColor="#424242"
        app:cardCornerRadius="5dp" />

    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="35dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_phone_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/we_were_unable_to_get_your_phone_automatically" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/your_phone"
                android:inputType="phone"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/err_text"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#F44336" />

        <Button
            android:id="@+id/btn_set_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:text="@string/done" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/mobile"
                android:contentDescription="@string/mobile"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_for_sender"
                android:textColor="#333"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/qr_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/qr" />

        <LinearLayout
            android:id="@+id/save_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_qr_code_to_phone"
                android:textColor="@color/colorPrimary"
                android:textSize="15.5sp"

                />

            <ImageView
                android:id="@+id/save_img_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_save"

                android:tint="@color/colorPrimary"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/save_img" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>